# Scout_mini_ROS1_Navigation

./: README.md  install_packages.sh
scout_bringup/scout_filter/: CMakeLists.txt  package.xml
scout_bringup/scout_filter/launch/: ekf_filter_cmd.launch  ekf_filter_gazebo.launch
scout_bringup/scout_filter/param/: ekf_cmd.yaml  ekf_gazebo.yaml
scout_bringup/scout_navigation/: package.xml
scout_bringup/scout_navigation/launch/: amcl.launch  move_base.launch  scout_navigation.launch
scout_bringup/scout_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
scout_bringup/scout_navigation/rviz/: scout_navigation.rviz
scout_bringup/scout_slam/: CMakeLists.txt  package.xml
scout_bringup/scout_slam/config/: gmapping_params.yaml
scout_bringup/scout_slam/launch/: gmapping_save.launch  scout_gmapping.launch  scout_slam.launch
scout_bringup/scout_slam/maps/: README.md  map1.yaml  map2.yaml  mymap.yaml
scout_bringup/scout_slam/rviz/: scout_gmapping.rviz
scout_bringup/scout_teleop/: CMakeLists.txt  package.xml  setup.py
scout_bringup/scout_teleop/launch/: scout_teleop_key.launch
scout_bringup/scout_teleop/scripts/: scout_teleop_key
scout_bringup/scout_teleop/src/scout_teleop/: __init__.py
scout_bringup/scout_test/: CMakeLists.txt  package.xml
scout_bringup/scout_test/launch/: odometry.launch  scout_mini_empty_world_2d_lidar.launch  scout_mini_empty_world_3d_lidar.launch  scout_mini_footprint.launch  scout_mini_frames.launch  scout_mini_playpen_2d_lidar.launch  scout_mini_playpen_3d_lidar.launch  scout_mini_playpen_camera.launch  scout_mini_sensor_test.launch
scout_bringup/scout_test/rviz/: odometry.rviz  scout_mini_footprint.rviz  scout_mini_frames.rviz  sensors.rviz
scout_gazebo_sim/odom_converter/: CMakeLists.txt  package.xml
scout_gazebo_sim/odom_converter/include/odom_converter/: odom_converter.hpp
scout_gazebo_sim/odom_converter/launch/: odom_converter.launch
scout_gazebo_sim/odom_converter/src/: odom_converter.cpp  odom_converter_node.cpp
scout_gazebo_sim/scout/scout_base/: CMakeLists.txt  package.xml
scout_gazebo_sim/scout/scout_base/include/scout_base/: scout_messenger.hpp
scout_gazebo_sim/scout/scout_base/launch/: scout_mini_base.launch
scout_gazebo_sim/scout/scout_base/src/: scout_base_node.cpp  scout_messenger.cpp
scout_gazebo_sim/scout/scout_description/launch/: scout_mini_stock.launch
scout_gazebo_sim/scout/scout_description/urdf/: HDL-32E.xacro  VLP-16.xacro  _d435.gazebo.xacro  _d435.urdf.xacro  gps.xacro  hokuyo_2d.xacro  imu.xacro  mini.xacro  openni-kinect.xacro  realsense-d435.xacro  rgb.xacro  scout_mini.urdf
scout_gazebo_sim/scout/scout_gazebo_sim/include/scout_gazebo/: scout_skid_steer.hpp
scout_gazebo_sim/scout/scout_gazebo_sim/launch/: scout_mini_empty_world.launch  scout_mini_house.launch  scout_mini_playpen.launch  spawn_scout_mini.launch
scout_gazebo_sim/scout/scout_gazebo_sim/src/: scout_skid_steer.cpp
scout_gazebo_sim/scout/scout_gazebo_sim/worlds/: turtlebot3_house.world
scout_gazebo_sim/sensor_plugin/velodyne_plugin/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro
sensor/: README.md
